# resemu

./: README.md  pyproject.toml
examples/: john_doe.yml
schema/: resemu.schema.json  resume.schema.json
scripts/: generate_json_schema.py
src/resemu/: __init__.py
src/resemu/cli/: main.py
src/resemu/generators/: latex.py  pdf.py
src/resemu/models/: resume.py  utils.py
src/resemu/templates/: engineering.tex.j2
tests/: test_generators.py
